--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,14 +1,3 @@
-/* src/styles/login.css */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Arial", sans-serif;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 /* Container */
 .login-container, .register-container {
@@ -34,8 +23,7 @@ form {
 
 /* Label Styles */
 label {
-  margin-bottom: 8px;
-  font-weight: bold;
+  font-weight: 400;
   color: #555;
   text-align: left;
   display: inline-block;
@@ -58,21 +46,6 @@ input:focus {
   outline: none;
 }
 
-/* Button Styles */
-button {
-  padding: 12px 20px;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background 0.3s;
-}
-
-button:hover {
-  background: linear-gradient(to right, #00f2fe, #4facfe);
-}
 
 /* Message Styling */
 p {
