--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-/*================================================
 
+
+* {
+    box-sizing: border-box;
+}
+
+/*================================================
 Moz Selection
 ================================================*/
 :root {
@@ -12,6 +17,8 @@ Moz Selection
     --body-fonts: "Nunito", sans-serif;
     --title-fonts: "Nunito", sans-serif;
     --border-redius: 10px;
+    --ligth-border: 1px solid #0000001F;
+    --dark-border: 1px solid #FFFFFF1F;
 }
 
 ::-moz-selection {
@@ -32,12 +39,13 @@ General
 body {
     background: var(--white-color);
     font-family: var(--body-fonts);
-    font-size: 1rem;
+    font-size: 14px;
     font-style: normal;
     font-weight: normal;
     line-height: 2;
     color: var(--secondary-color);
     overflow-x: hidden;
+    margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -95,7 +103,6 @@ h6 {
 a, .button {
     color: var(--primary-color);
     outline: none !important;
-    transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -172,25 +179,19 @@ table {
 table td, table th {
     border: 1px solid var(--grey-color);
     padding: 8px;
-    text-align: center;
+    text-align: left;
 }
 
 /*===== Input Textarea =====*/
 input, input.form-control {
-    background: var(--grey-color);
-    border: 1px solid var(--grey-color);
+    background: transparent;
+    border: var(--ligth-border);
     color: var(--dark-color);
     width: 100%;
-    float: left;
-    font-size: 16px;
     padding: 0 15px;
-    height: 51px;
-    line-height: 48px;
+    height: 36px;
     outline: none;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    transition: all 0.5s ease-in-out;
+    border-radius: var(--border-redius);
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -218,10 +219,7 @@ textarea {
     float: left;
     padding: 10px 15px;
     outline: none;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    transition: all 0.5s ease-in-out;
+    border-radius: var(--border-redius);
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -231,18 +229,14 @@ textarea {
 
 /*===== Select =====*/
 select, select.form-control {
-    border: 1px solid var(--grey-color);
+    background: transparent;
+    border: var(--ligth-border);
     color: var(--dark-color);
     width: 100%;
-    float: left;
     padding: 0 15px;
-    height: 51px;
-    line-height: 48px;
+    height: 36px;
     outline: none;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    transition: all 0.5s ease-in-out;
+    border-radius: var(--border-redius);
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -264,3 +258,9 @@ select, select.form-control {
     padding: 0 15px;
 }
 
+
+fieldset {
+    border: var(--ligth-border);
+    padding: 15px;
+    border-radius: var(--border-redius);
+}
