--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,12 @@
 
 /* Container */
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .login-container, .register-container {
   background-color: #fff;
   padding: 40px 30px;
@@ -16,9 +23,11 @@ h2 {
 }
 
 /* Form Styling */
-form {
+.login-container form {
   display: flex;
+  align-items: center;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 /* Label Styles */
